--- a/package.json
+++ b/package.json
@@ -1,8 +1,48 @@
 {
   "name": "kickgoing",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "src/server.js",
   "repository": "https://github.com/ddalkigum/going",
-  "author": "ddalkigum <sol35352000@gmail.com>",
-  "license": "MIT"
+  "author": "",
+  "program": "mysql_node/src/app.ts",
+  "scripts": {
+    "start": "ts-node src/server.ts",
+    "dev": "cd src && nodemon --exec ts-node server.ts",
+    "db": "ts-node src/ormConfig.ts"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mysql2": "^2.2.5",
+    "redis": "^3.0.2",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1",
+    "twilio": "^3.56.0",
+    "typeorm": "^0.2.31"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.28",
+    "@types/redis": "^2.8.28",
+    "@types/socket.io": "^2.1.13",
+    "@types/socket.io-client": "^1.4.35",
+    "@types/twilio": "^2.11.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
+  }
 }
