--- a/package.json
+++ b/package.json
@@ -5,14 +5,44 @@
   "main": "src/server.js",
   "repository": "https://github.com/ddalkigum/going",
   "program": "mysql_node/src/app.ts",
+
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/polyfill": "^7.12.1",
+    "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.28",
+    "@types/redis": "^2.8.28",
+    "@types/socket.io": "^2.1.13",
+    "@types/socket.io-client": "^1.4.35",
+    "@types/twilio": "^2.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "chai": "^4.3.0",
+    "eslint": "^7.20.0",
+    "jest": "^26.6.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
+  },
   "scripts": {
     "start": "ts-node src/server.ts",
     "dev": "cd src && nodemon --exec ts-node server.ts",
-    "db": "ts-node src/ormConfig.ts"
+    "db": "ts-node src/ormConfig.ts",
+    "test": "jest"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-typescript": "^7.12.17",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -23,25 +53,10 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^3.1.1",
     "socket.io-client": "^3.1.1",
     "twilio": "^3.56.0",
     "typeorm": "^0.2.31"
-  },
-  "devDependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.28",
-    "@types/redis": "^2.8.28",
-    "@types/socket.io": "^2.1.13",
-    "@types/socket.io-client": "^1.4.35",
-    "@types/twilio": "^2.11.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
   }
 }
