--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "src/server.js",
   "repository": "https://github.com/ddalkigum/going",
   "program": "mysql_node/src/app.ts",
-
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.12.13",
     "@babel/polyfill": "^7.12.1",
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/express-ws": "^3.0.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
@@ -49,6 +49,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "express-ws": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
@@ -56,6 +57,7 @@
     "reflect-metadata": "^0.1.13",
     "socket.io": "^3.1.1",
     "socket.io-client": "^3.1.1",
+    "socket.io-redis": "^6.0.1",
     "twilio": "^3.56.0",
     "typeorm": "^0.2.31"
   }
